# AppMath

./: README.md
AppMath4/: main.py  matrixGenerator.py  methods.py
AppMathLab2/: main.py
AppMathLab3/: conjugateGradient.py  gradient.py  main.py  mathHelpers.py  methods.py
AppMath_Lab1/: Brent.cpp  CMakeLists.txt  Dichotomy.cpp  Fibonacci.cpp  GoldenRatio.cpp  Parabola.cpp  constants.h  fibonacciNumberFunction.cpp  main.cpp  methods.h  objectiveFunction.cpp
AppMath_Lab1/output/: BrentSection.txt  DichotomySection.txt  GoldenRatioSection.txt  ParabolaSection.txt  lab1out.txt
